kubernetes/apps/gitea/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
  - name: ssh
    port: 22
    targetPort: 22
  type: ClusterIP
